[gd_scene load_steps=13 format=3 uid="uid://bndtw5amva0qs"]

[ext_resource type="Script" path="res://MainMenu/Settings/Settings.gd" id="1_kg16e"]
[ext_resource type="Texture2D" uid="uid://dv0lei01qofet" path="res://HUD/Art/HealthbarEmpty.png" id="2_6aba0"]
[ext_resource type="Texture2D" uid="uid://bnjjuhaxbatnu" path="res://MainMenu/Art/Exit.png" id="3_7d028"]
[ext_resource type="Texture2D" uid="uid://be7woavjk0ct6" path="res://MainMenu/Art/ExitHover.png" id="4_3v2p1"]
[ext_resource type="Texture2D" uid="uid://bqeq2pabgm5cv" path="res://MainMenu/Settings/Art/Music.png" id="5_hiigs"]
[ext_resource type="Texture2D" uid="uid://ciyg6mu5y30k2" path="res://Enemies/Art/XP.png" id="5_ni6cf"]
[ext_resource type="Texture2D" uid="uid://3rujxkrgrhfo" path="res://HUD/Art/ExperienceBarFull.png" id="6_m1yqs"]
[ext_resource type="Texture2D" uid="uid://bwwbon3af15p0" path="res://MainMenu/Settings/Art/MusicOff.png" id="6_n61qa"]
[ext_resource type="Texture2D" uid="uid://dvmvqg0fuq8op" path="res://MainMenu/Settings/Art/MusicHover.png" id="7_camyo"]

[sub_resource type="LabelSettings" id="LabelSettings_ivjvh"]
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3hj35"]
texture = ExtResource("2_6aba0")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dir7y"]
texture = ExtResource("6_m1yqs")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kg16e")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.5
offset_top = -336.0
offset_right = 162.5
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6aba0")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Title" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.5
offset_top = 29.0
offset_right = 157.5
offset_bottom = 64.0
grow_horizontal = 2
texture = ExtResource("2_6aba0")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -22.5
offset_right = 202.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_ivjvh")
horizontal_alignment = 1

[node name="Exit" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 43.0
offset_top = 661.0
offset_right = 75.0
offset_bottom = 693.0
texture_normal = ExtResource("3_7d028")
texture_pressed = ExtResource("4_3v2p1")
texture_hover = ExtResource("4_3v2p1")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 0
offset_left = 56.0
offset_top = 96.0
offset_right = 88.0
offset_bottom = 128.0

[node name="Music" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_hiigs")
texture_pressed = ExtResource("6_n61qa")
texture_hover = ExtResource("7_camyo")

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/Music"]
texture_filter = 1
custom_minimum_size = Vector2(240, 16)
layout_mode = 2
offset_left = 40.0
offset_top = 6.0
offset_right = 296.0
offset_bottom = 22.0
theme_override_icons/grabber = ExtResource("5_ni6cf")
theme_override_icons/grabber_highlight = ExtResource("5_ni6cf")
theme_override_styles/slider = SubResource("StyleBoxTexture_3hj35")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_dir7y")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_dir7y")
value = 50.0

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="VBoxContainer/Music" to="." method="_on_music_toggled"]
[connection signal="value_changed" from="VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
